<resources>
    <string name="app_name">Hearthstone Dust Manager</string>

    <string name="dialog_bt_ok">OK</string>
    <string name="dialog_bt_yes">Sure</string>
    <string name="dialog_bt_no">No</string>

    <string name="action_yourDecks">Your Decks</string>
    <string name="action_tierStandardDecks">Standard Decks</string>
    <string name="action_tierWildDecks">Wild Decks</string>
    <string name="action_settings">Settings</string>
    <string name="action_testes">Testes</string>

    <string name="title_yourDecks">Your Decks</string>
    <string name="title_settings">Settings</string>
    <string name="title_tierStandardDecks">Tier Standard Decks</string>
    <string name="title_tierWildDecks">Tier Wild Decks</string>
    <string name="title_deckBuilder">Deck Builder</string>
    <string name="title_createDeck">New Deck</string>
    <string name="title_testes">Teste</string>

    <string name="bt_yourdecks_importDeck">Import your deck code here</string>
    <string name="bt_yourdecks_createDeck">Create a new deck</string>

    <string name="tv_yourdecks_or">or</string>
    <string name="tv_createdeck_name">Name</string>
    <string name="tv_createdeck_class">Class</string>
    <string name="tv_createdeck_stereotype">Stereotype</string>
    <string name="tv_settings_version">Version:</string>
    <string name="tv_settings_versionNumber">Number of version is put here</string>
    <string name="tv_settings_clearPreferences">Restore default preferences</string>
    <string name="tv_settings_preferences">App Preferences</string>
    <string name="tv_settings_setWeight">Set Weight:</string>
    <string name="tv_settings_typeCardWeight">Type Card Weight:</string>

    <string name="tv_settings_setClassicSet">Classic set  = <b>%d</b></string>
    <string name="tv_settings_setLastSet">Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setSecondLastSet">Second to Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setThirdLastSet">Third to Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setFourthLastSet">Fourth to Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setFifthLastSet">Fifth to Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setSixthLastSet">Sixth to Last Standard set = <b>%d</b></string>
    <string name="tv_settings_setWildSet">All Remaining Wild set  = <b>%d</b></string>
    <string name="tv_settings_setBasicType">Basic Type = <b>%d</b></string>
    <string name="tv_settings_setNeutralType">Neutral Type  = <b>%d</b></string>
    <string name="tv_settings_setClassType">Class Type  = <b>%d</b></string>

    <string name="msg_clearPreferences">Do you want restore all your settings preferences?</string>
    <string name="msg_tooltip_appPreferences">Your preferences to set deck build and your priorities in arcane dust manager.</string>
    <string name="msg_tooltip_setWeight">Defines the priority of creating each card by collection, managing in the game through arcane dust. Cards from newer collections tend to have higher priorities than older ones, as older ones tend to leave the standard block earlier.</string>
    <string name="msg_tooltip_cardWeight">Define the priority by card type, basic cards are all those that every novice player receives until reaching level 20 with a hero class, so we advise that set = 1. Neutral cards with gray background can be used in all types of decks, therefore, your priority should be higher than colored background class cards that can only be used by specific classes.</string>
    <string name="msg_failed_in_synchronize_data">Please check your connection for synchronize you application data</string>

    <string name="ed_createdeck_name">Name of your deck</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bt_createdeck_create">Create deck</string>

    <string name="ed_deckbuilder_findByName">find your card by name</string>
    <string name="ed_settings_stereotypeCreate">Create a stereotype</string>

    <string name="url_updatePlayStore">https://play.google.com/store/apps/details?id=com.michelbarbosa.hsdm_hearthstonedustmanager</string>
</resources>
